# SFML-Game-Engine

./: CMakeLists.txt
src/: Action.cpp  Action.hpp  Animation.cpp  Animation.hpp  AssetManager.cpp  AssetManager.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  Components.hpp  Core.cpp  Core.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Scene.cpp  Scene.hpp  Scene_Menu.cpp  Scene_Menu.hpp  Scene_Test.cpp  Scene_Test.hpp  Scene_Test2.hpp  Vec2.cpp  Vec2.hpp  animTest.cpp  main.cpp
